syntax = "proto3";

package api.v1;

import "api/v1/options.proto";
import "buf/validate/validate.proto";

message RedirectRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message RedirectsRequest {
  int32 page = 1 [(buf.validate.field).int32.gte = 0];
  int32 pagesize = 2 [(buf.validate.field).int32.gte = 0];
  string search = 3;
}

message RedirectsResponse {
  repeated FullRedirect data = 1;
  int32 total = 2 [(buf.validate.field).int32.gte = 0];
}

message Redirect {
  string id = 1 [
    (buf.validate.field).string.uuid = true,
    (api.v1.is_redirect_id) = true
  ];
  string domain_id = 2 [(buf.validate.field).string.uuid = true];
  string path = 3 [
    (buf.validate.field).string.uri_ref = true,
    (buf.validate.field).string.prefix = "/"
  ];
  string target_url = 4 [(buf.validate.field).string.uri = true];
  bool active = 5;

  // ignore, is set by backend
  optional string creator = 6;
}

message FullRedirect {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string domain_id = 2 [(buf.validate.field).string.uuid = true];
  string domain = 3 [(buf.validate.field).string.pattern = "^[a-zA-Z0-9.-]+(:[0-9]{1,5})?$"];
  string path = 4 [
    (buf.validate.field).string.uri_ref = true,
    (buf.validate.field).string.prefix = "/"
  ];
  string target_url = 5 [(buf.validate.field).string.uri = true];
  bool active = 6;

  // @gotags: json:"-"
  // ignore, is set by backend
  optional string creator = 7;
}

message CreateRedirectRequest {
  string domain_id = 1 [(buf.validate.field).string.uuid = true];
  string path = 2 [
    (buf.validate.field).string.uri_ref = true,
    (buf.validate.field).string.prefix = "/",
    (api.v1.is_redirect_id) = true
  ];
  string target_url = 3 [(buf.validate.field).string.uri = true];
  bool active = 4;

  // @gotags: json:"-"
  // ignore, is set by backend
  optional string creator = 5;
}
